[package]
name = "hyper-web-app-boilerplate"
version = "0.1.0"
authors = ["Mohamed Kawia <send2kawia@gmail.com>"]

[dependencies]
hyper= "0.11.2"
futures = "0.1.13"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
tokio-service = "0.1.0"

url = "1.5.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

handlebars = "0.29.1"






